@@ -1,9 +1,8 @@
 # -*- coding: utf-8 -*-
 import json, re, datetime, socket
-import xbmc
 import urllib.request as urllib2
 from simplecache import SimpleCache
-from phate89lib import kodiutils
+from . import addonutils
 
 
 class SkyItalia:
@@ -14,41 +13,39 @@ class SkyItalia:
     GET_VIDEO_DATA = 'https://apid.sky.it/vdp/v1/getVideoData?token={token}&caller=sky&rendition=web&id={id}'  # noqa: E501
     TOKEN = 'F96WlOd8yoFmLQgiqv6fNQRvHZcsWk5jDaYnDvhbiJk'
     TIMEOUT = 15
-    DEBUG = kodiutils.getSetting('Debug') == 'true'
-    QUALITY = kodiutils.getSetting('Quality')
+    LOGLEVEL = int(addonutils.getSetting('LogLevel'))
+    QUALITY = addonutils.getSetting('Quality')
     QUALITIES = ['web_low_url', 'web_med_url', 'web_high_url', 'web_hd_url']
-    LOGOSDIR = '%sresources\\logos\\' % kodiutils.PATH_T
-    FANART = '%sresources\\fanart.png' % kodiutils.PATH_T
+    LOGOSDIR = '%sresources\\logos\\' % addonutils.PATH_T
+    FANART = addonutils.FANART
 
     def __init__(self):
         socket.setdefaulttimeout(self.TIMEOUT)
         self.cache = SimpleCache()
 
-    def log(self, msg, level=xbmc.LOGDEBUG):
-        import traceback
-        if self.DEBUG is False and level != xbmc.LOGERROR:
-            return
-        if level == xbmc.LOGERROR:
-            msg += ' ,' + traceback.format_exc()
-        xbmc.log('%s - %s - %s' % (kodiutils.ID, kodiutils.VERSION, msg), level)
+    def log(self, msg, level=0):
+        if level >= self.LOGLEVEL:
+            addonutils.log(msg, level)
 
     def openURL(self, url):
-        self.log('openURL, url = %s' % url)
+        self.log('openURL, url = %s' % url, 1)
         try:
             cacheresponse = self.cache.get(
-                '%s.openURL, url = %s' % (kodiutils.NAME, url))
+                '%s.openURL, url = %s' % (addonutils.NAME, url))
             if not cacheresponse:
+                self.log('openURL, no cache found')
                 request = urllib2.Request(url)              
                 response = urllib2.urlopen(request, timeout=self.TIMEOUT).read()
                 self.cache.set(
-                    '%s.openURL, url = %s' % (kodiutils.NAME, url),
+                    '%s.openURL, url = %s' % (addonutils.NAME, url),
                     response,
                     expiration=datetime.timedelta(days=1))
-            return self.cache.get('%s.openURL, url = %s' % (kodiutils.NAME, url))
+            return self.cache.get('%s.openURL, url = %s' % (addonutils.NAME, url))
         except Exception as e:
-            self.log("openURL Failed! " + str(e), xbmc.LOGERROR)
-            kodiutils.notify(kodiutils.LANGUAGE(31000))
-            kodiutils.endScript()
+            self.cache = None
+            self.log("openURL Failed! " + str(e), 3)
+            addonutils.notify(addonutils.LANGUAGE(31000))
+            addonutils.endScript()
 
     def cleanTitle(self, title):
         import html
@@ -57,11 +54,11 @@ class SkyItalia:
         return title
 
     def loadData(self, url):
-        self.log('loadData, url = %s' % url)
+        self.log('loadData, url = %s' % url, 1)
         response = self.openURL(url)
         if len(response) == 0:
-            kodiutils.notify(kodiutils.LANGUAGE(31000))
-            self.log('loadData: "%s" not available' % url, xbmc.LOGERROR)
+            addonutils.notify(addonutils.LANGUAGE(31000))
+            self.log('loadData: "%s" not available' % url, 3)
             return
         response = response.decode('utf-8')
 
@@ -86,14 +83,14 @@ class SkyItalia:
                 items = json.loads(main)
                 self.log('loadData, main menu found')
             except Exception as e:
-                kodiutils.notify(kodiutils.LANGUAGE(31001))
-                self.log('loadJsonData, NO JSON DATA FOUND' + str(e), xbmc.LOGERROR)
-                kodiutils.endScript()
+                addonutils.notify(addonutils.LANGUAGE(31001))
+                self.log('loadJsonData, NO JSON DATA FOUND' + str(e), 3)
+                addonutils.endScript()
 
         return items
 
     def getAssets(self, data):
-        self.log('%d assets found' % len(data['assets']))
+        self.log('getAssets, assets = %d' % len(data['assets']), 1)
         for item in data['assets']:
             label = self.cleanTitle(item['title'])
             yield {
@@ -113,6 +110,7 @@ class SkyItalia:
             }
 
     def getMainMenu(self):
+        self.log('getMainMenu, items = %d' % len(self.HOME), 1)
         menu = self.loadData(self.HOME)
         for item in menu:
             # yield only active menu elements
@@ -130,6 +128,7 @@ class SkyItalia:
                 }
     
     def getSection(self, section):
+        self.log('getSection, section = %s' % section, 1)
         subsections = self.loadData('%s%s' % (self.HOME, section))
         for s, t in subsections:
             label = self.cleanTitle(t)
@@ -148,8 +147,9 @@ class SkyItalia:
             }
 
     def getSubSection(self, section, subsection, title, page=0):
+        self.log('getSubSection, section/subsection = %s/%s' % (section, subsection), 1)
         yield {
-            'label': kodiutils.LANGUAGE(32001) % title,
+            'label': addonutils.LANGUAGE(32001) % title,
             'params': {
                 'section': section,
                 'subsection': subsection,
@@ -171,6 +171,7 @@ class SkyItalia:
         yield from self.getAssets(data)
 
     def getPlaylists(self, section, subsection):
+        self.log('getPlaylists, section/subsection = %s/%s' % (section, subsection), 1)
         url = self.GET_PLAYLISTS
         url = url.replace('{token}', self.TOKEN)
         url = url.replace('{section}', section)
@@ -190,6 +191,7 @@ class SkyItalia:
             }
 
     def getPlaylistContent(self, playlist_id):
+        self.log('getPlaylistContent, playlist_id = %s' % playlist_id, 1)
         url = self.GET_PLAYLIST_VIDEO
         url = url.replace('{token}', self.TOKEN)
         url = url.replace('{id}', playlist_id)
@@ -197,14 +199,17 @@ class SkyItalia:
         yield from self.getAssets(data)
 
     def getVideo(self, asset_id):
+        self.log('getVideo, asset_id = %s' % asset_id, 1)
         url = self.GET_VIDEO_DATA
         url = url.replace('{token}', self.TOKEN)
         url = url.replace('{id}', asset_id)
         data = self.loadData(url)
 
         url = None
+        self.log('getPlaylistContent, quality_selected = %s' % self.QUALITIES[int(self.QUALITY)])
         for i in range(int(self.QUALITY), 0, -1):
             if self.QUALITIES[i] in data:
+                self.log('getPlaylistContent, quality_found = %s' % self.QUALITIES[i])
                 url = data[self.QUALITIES[i]]
                 break
 
