@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
     <category label="30000">
-        <setting id="Debug" type="bool" label="30001" default="false" />
         <setting id="Quality" type="enum" label="30002" default="3" values="LOW|MED|HIGH|HD" />
+        <setting id="LogLevel" type="enum" label="30003" default="3" values="Debug|Info|Warning|Error"/>
     </category>
 </settings>
