@@ -1,3 +1,7 @@
+[B]0.0.7[/B]
+- removed phate89 library and use a custom one
+- logging and notification cleanup
+
 [B]0.0.6[/B]
 - code cleanup
 - added some more logos
